fix(api): fix typo and swagger category
