# models/base.go
@@ -3,8 +3,8 @@ package models
 import "time"
 
 type BaseModel struct {
-	ID        uint `json:"id" gorm:"primaryKey"`
-	CreatedAt time.Time
-	UpdatedAt time.Time
-	DeletedAt time.Time `gorm:"index"`
+	ID        uint      `json:"id" gorm:"primaryKey"`
+	CreatedAt time.Time `json:"-"`
+	UpdatedAt time.Time `json:"-"`
+	DeletedAt time.Time `json:"-" gorm:"index"`
 }
