# router/api/v1/endpoints/endpoints.go
@@ -12,7 +12,7 @@ type IndexEndpointResponse struct {
 
 // Index list all endpoints
 func Index(c *gin.Context) {
-	// swagger:route GET /endpoints IndexEndpoint
+	// swagger:route GET /endpoints Endpoint IndexEndpoint
 	//		list all endpoints, FOR AGENT/ADMIN ONLY
 	// responses:
 	//		200: IndexEndpointResponse
@@ -20,7 +20,7 @@ func Index(c *gin.Context) {
 
 // Store create a new endpoint
 func Store(c *gin.Context) {
-	// swagger:route POST /endpoints StoreEndpoit Endpoint
+	// swagger:route POST /endpoints Endpoint StoreEndpoit
 	//		create a new endpoint
 	// responses:
 	//		200: Endpoint
@@ -28,7 +28,7 @@ func Store(c *gin.Context) {
 
 // Update update an existing endpoint
 func Update(c *gin.Context) {
-	// swagger:route PUT /endpoints/{id} UpdateEndpoint Endpoint
+	// swagger:route PUT /endpoints/{id} Endpoint UpdateEndpoint
 	//		update an existing endpoint
 	// responses:
 	//		200: Endpoint
@@ -37,7 +37,7 @@ func Update(c *gin.Context) {
 
 // Destroy delete an existing endpoint
 func Destroy(c *gin.Context) {
-	// swagger:route DELETE /endpoints/{id} UpdateEndpoint Endpoint
+	// swagger:route DELETE /endpoints/{id} Endpoint UpdateEndpoint
 	//		delete an existing endpoint
 	// responses:
 	//		204:
