# router/api/v1/users/users.go
@@ -22,7 +22,7 @@ type DestroyUserRequest struct {
 
 // Index list all users
 func Index(c *gin.Context) {
-	// swagger:route GET /users IndexUser
+	// swagger:route GET /users User IndexUser
 	//		list all users, FOR ADMIN ONLY
 	// responses:
 	//		200: IndexUserResponse
@@ -30,16 +30,16 @@ func Index(c *gin.Context) {
 
 // Update update user info
 func Update(c *gin.Context) {
-	// swagger:route PUT /users/{username} UpdateUser User
+	// swagger:route PUT /users/{username} User UpdateUser
 	//		update user info
-	// response:
-	//		200: User
+	// responses:
+	//		200: UserResponse
 }
 
 // Destroy delete user
 func Destroy(c *gin.Context) {
-	// swagger:route DELETE /users/{username} DestroyUser DestroyUserRequest
+	// swagger:route DELETE /users/{username} User DestroyUser
 	//		destroy user by admin or user himself
-	// response:
-	//		204:
+	// responses:
+	//		204: DestroyUserRequest
 }
